-- Criação da tabela Address compatível com H2 e PostgreSQL
CREATE TABLE address (
    id BIGINT PRIMARY KEY GENERATED BY DEFAULT AS IDENTITY,
    street VARCHAR(255),
    number VARCHAR(32),
    complement VARCHAR(64),
    neighborhood VARCHAR(64),
    city VARCHAR(64),
    state VARCHAR(32),
    zip_code VARCHAR(16),
    created_at TIMESTAMP DEFAULT CURRENT_TIMESTAMP,
    updated_at TIMESTAMP DEFAULT CURRENT_TIMESTAMP
);

